Include required Java module options in container for Spark Java 21+ compatibility (#224)
* Initial plan

* Make Log4j StatusLogger level configurable and document Java options

Co-authored-by: yurishkuro <3523016+yurishkuro@users.noreply.github.com>

* Include required --add-opens flags in container image for Spark Java 21+ compatibility

Co-authored-by: yurishkuro <3523016+yurishkuro@users.noreply.github.com>

* Improve readability by formatting SPARK_JAVA_OPTS on multiple lines

Co-authored-by: yurishkuro <3523016+yurishkuro@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: yurishkuro <3523016+yurishkuro@users.noreply.github.com>
Co-authored-by: Yuri Shkuro <yurishkuro@users.noreply.github.com>