@@ -32,8 +32,6 @@ public class CassandraDependenciesDockerJobTest extends CassandraDependenciesJob
         .withLogConsumer(new LogToConsolePrinter("[spark-dependencies] "))
         .withEnv("CASSANDRA_KEYSPACE", "jaeger_v1_dc1")
         .withEnv("CASSANDRA_CONTACT_POINTS", "cassandra") // This should be an address within the docker network
-        .withEnv("JAVA_OPTS",
-            "--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED -Djdk.reflect.useDirectMethodHandle=false")
         .withEnv("CASSANDRA_LOCAL_DC", cassandra.getLocalDatacenter())
         .withEnv("CASSANDRA_USERNAME", cassandra.getUsername())
         .withEnv("CASSANDRA_PASSWORD", cassandra.getPassword())
